<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:text="@string/tv_names" />

    <TextView
        android:id="@+id/tvSurnames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:text="@string/tv_surnames" />

    <TextView
        android:id="@+id/tvTypeDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:text="@string/tv_type_doc" />

    <TextView
        android:id="@+id/tvNroDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:text="@string/tv_nro_doc" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:text="@string/tv_phone" />

    <TextView
        android:id="@+id/tvStateStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:text="@string/tv_state" />

</LinearLayout>