<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:text="@string/welcome"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        android:text="@string/title_home"
        android:padding="8dp"
        />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:queryHint="@string/search"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/add_typeDoc"
        android:text="@string/add_typeDoc"
        app:srcCompat="@drawable/add_24"
        app:backgroundTint="@color/skye"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/btnViewStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_student"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/skye"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTypeDocs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </ScrollView>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="16dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            tools:ignore="UselessParent">

            <!- Encabezado de la tabla
            <TableRow
                android:background="@color/skye">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Nombre" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Nombre corto" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Estado" />

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/> <!- Línea horizontal

            <!- Fila de datos
            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Documento Nacional de Identidad" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="DNI" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Activo" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/> <!- Línea horizontal

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Registro Único de Contribuyentes" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="RUC" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Inactivo" />

            </TableRow>

            <!Agrega más filas según sea necesario

        </TableLayout>

    </LinearLayout> -->

</LinearLayout>