<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_marginTop="150dp"
    tools:context=".RegisterUpdate">

    <TextView
        android:id="@+id/tvRegisterUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:text="@string/title_register"
        android:textColor="@color/snack"
        android:padding="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_name"
            android:inputType="textCapSentences|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNameShort"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNameShort"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_name_short"
                android:inputType="textCapSentences|textAutoCorrect"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputState"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:helperTextTextColor="@color/grey">

            <Spinner
                android:id="@+id/spnSate"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:overlapAnchor="false" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save"
        android:backgroundTint="@color/skye"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"/>

</LinearLayout>